[gd_scene load_steps=8 format=3 uid="uid://crsfr0tlb1k21"]

[ext_resource type="Script" uid="uid://c6tkxnbcq6wn8" path="res://scenes/tile/tile.gd" id="1_bibkx"]
[ext_resource type="Texture2D" uid="uid://dpc5l8saxkovq" path="res://assets/tile300x300.png" id="1_vb0sl"]
[ext_resource type="Texture2D" uid="uid://sojx5up3opjq" path="res://assets/red300x300.png" id="2_dvver"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vb0sl"]
size = Vector2(298.5, 298.5)

[sub_resource type="Animation" id="Animation_bibkx"]
resource_name = "redTileGrow"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_2jaqc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_002hm"]
_data = {
&"RESET": SubResource("Animation_2jaqc"),
&"redTileGrow": SubResource("Animation_bibkx")
}

[node name="Tile" type="Area2D"]
script = ExtResource("1_bibkx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_vb0sl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.25, -0.25)
shape = SubResource("RectangleShape2D_vb0sl")

[node name="redTile" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.45490196)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("2_dvver")

[node name="AnimationPlayer" type="AnimationPlayer" parent="redTile"]
libraries = {
&"": SubResource("AnimationLibrary_002hm")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="redTile/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
